<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zao</string>
    <string name="hello_world">Hello world!</string>
    <string name="putDial">请输入电话号码</string>
    <string name="putName">请输入姓名</string>
    <string name="phone">电话</string>
    <string name="dial">拨打</string>
    <string name="text_login_in">登录</string>
    <string name="cbtext_login_rem">勾选保存信息</string>
    <string name="show_space">显示SD卡</string>
    <string name="text_space_path">空间</string>
    <string name="xmlSera_saveAndShow">序列化xml并读取</string>
    <string name="xmlParse_Show">解析xml</string>
    <string name="text_Xml_seralizer">序列</string>
    <string name="create_sqlite">创建或更新数据库</string>
    <string name="insert_sqlite">数据库插入</string>
    <string name="delete_sqlite">数据库删除</string>
    <string name="update_sqlite">数据库更新</string>
    <string name="query_sqlite">数据库查询</string>
    <string name="trans_sqlite">数据库事务——转账</string>
    <string name="text_sqlite">数库</string>
    <string name="text_sqlite_transaction">事务</string>
    <string name="text_sqlite_version">1</string>
    <string name="text_listview_lv1">ListView</string>
    <string name="array_adapter">Array</string>
    <string name="simple_adapter">Simple</string>
    <string name="btn_database_listview">插查</string>
    <string name="texturl">https://www.zhihu.com/rss</string>
    <string name="texturl_show">显示</string>
    <string name="htmlcode">源码</string>
    <string name="htmlpic">图片</string>
    <string name="loadpic">图片</string>
    <string name="handle_time">60</string>
    <string name="count_handler">计时</string>
    <string name="zhihu_rss">知乎</string>
    <string name="intent_zaonotes">早记</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="none">无</string>
    <string name="btn_jump">跳转</string>
    <string name="rpcalc">人品</string>
    <string name="sendsms">短信</string>
    <string name="select">+</string>
    <string name="insert_sms">插入</string>
    <string name="send_sms">发送</string>
    <string name="input_ipnum">请输入IP号码</string>
    <string name="ip_num">IP</string>
    <string name="phone_listen">监听</string>
    <string name="sms_show">显示收到的短信</string>
    <string name="action_broadcast">com.onezao.broadcast.action</string>
    <string name="broacast">广播</string>
    <string name="broacast_order">有序</string>
    <string name="broacast_rigister">动态</string>
    <string name="dialog">对话</string>
    <string name="start_service">开启服务</string>
    <string name="stop_service">关闭服务</string>
    <string name="service">服务</string>
    <string name="record">录音</string>
    <string name="bind_service">Bind</string>
    <string name="unbind_service">unbind解绑服务</string>
    <string name="call_method_service">调用服务内部的方法</string>
    <string name="music">音乐</string>
    <string name="mixstart">混合</string>
    <string name="provider">提供</string>
    <string name="sms">短信</string>
    <string name="picpath">/ame/linsha.png</string>
    <string name="picpath2">/ame/beau.jpg</string>
    <string name="musicpath">/ame/山丘-李宗盛 .mp3</string>
    <string name="options">3</string>
    <string name="matrix">matrix</string>
    <string name="paintsize">16</string>
    <string name="gallery">相册</string>
    <string name="erase">刮刮</string>
    <string name="et_netmusic_path_0113">http://192.168.1.112:8080/onetake.mp3</string>
    <string name="et_video_path_0113_02">http://192.168.1.112:8080/liux.mp4</string>
    <string name="et_video_path_0113">http://video.feidieshuo.com/mp4/%E9%A3%9E%E7%A2%9F%E8%AF%B4/201.%E6%88%91%E6%9B%B4%E5%96%9C%E6%AC%A2%E5%86%85%E5%90%91%E7%9A%84%E8%87%AA%E5%B7%B1%EF%BC%8C%E4%BD%A0%E5%91%A2%EF%BC%9F%EF%BC%88%E4%B8%BB%E7%AB%99%EF%BC%89.mp4</string>
    <string name="prepare">准备</string>
    <string name="video">视频</string>
    <string name="playpause">播放暂停</string>
    <string name="paintcolor">Color.BLUE</string>
    <string name="firstfragment">第一个Fragment0116</string>
    <string name="secondfragment">第二个Fragment0116</string>
    <string name="Fragment">frag</string>
    <string name="changescreen">横竖屏幕切换</string>
    <string name="index">壹早</string>
    <string name="contact">联系人</string>
    <string name="discover">发现</string>
    <string name="me">我</string>
    <string name="fragmentchange">修改Fragment内容</string>
    <string name="autocomplete">填充</string>
    <string name="drawableanimation">帧动</string>
    <string name="viewanimation">补间</string>
    <string name="alpha">透明</string>
    <string name="rotate">旋转</string>
    <string name="scale">缩放</string>
    <string name="translate">平移</string>
    <string name="animset">组合</string>
    <string name="notification">通知</string>
    <string name="start">开始</string>
    <string name="stop">结束</string>
    <string name="pressure">压力</string>
    <string name="protector">卫士</string>
    <string name="splash_download2">https://raw.githubusercontent.com/cereuz/cereuz.github.io/master/zao36update.json</string>
    <string name="splash_download">http://192.168.43.230:8080/zao36update.json</string>
    <string name="update">更新</string>
    <string name="function_list_0207">功能列表</string>
    <string name="marquee_0207">夏天夏天悄悄过去，留下小秘密，呀嘻嘻，呀嘻嘻，不能告诉你。呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻呀嘻嘻</string>
        
     <string name="action_diary">日记</string>
    <string name="action_query">查询</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_save">保存</string>
    <string name="writediary_title_hint">标题: </string>
    <string name="writediary_author_hint">作者: </string>
    <string name="edittext_writediary_hint">今天，我写了一篇日记。。。</string>
    <string name="btn_writediary_save">保存</string>
    <string name="btn_writediary_back">返回</string>
    <string name="dialog_message">你的内容为空，请写下你的日记。\n Email : sunedo@qq.com \n主页 ：www.onezao.com\n淘宝 ：http://fone.taobao.com \n豆瓣 ：https://site.douban.com/273850/</string>
    <string name="dialog_message2">你的内容为空，请写下你的日记。 Email : sunedo@qq.com     主页 ：www.onezao.com   淘宝 ：http://fone.taobao.com 豆瓣 ：https://site.douban.com/273850/</string>
   

</resources>
