<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_sqlite_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/text_sqlite_version"/>
    <Button 
        android:id="@+id/btn_create_sqlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_sqlite"/>
    <Button 
        android:id="@+id/btn_insert_sqlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_sqlite"/>
    <Button 
        android:id="@+id/btn_delete_sqlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_sqlite"/>
    <Button 
        android:id="@+id/btn_update_sqlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_sqlite"/>
    <Button 
        android:id="@+id/btn_query_sqlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_sqlite"/>
    <Button 
        android:id="@+id/btn_trans_sqlite"
        android:onClick="trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trans_sqlite"/>
    <TextView 
        android:id="@+id/tv_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"/>

</LinearLayout>
