<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <EditText 
        android:id="@+id/et_rpcalc_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/putName"/>
    <RadioGroup 
        android:id="@+id/rg_rpcalc_gender"
        android:layout_below="@id/et_rpcalc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton 
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton 
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
        <RadioButton 
            android:id="@+id/rb_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"/>
    </RadioGroup>
    <Button 
        android:id="@+id/btn_calc_jump"
        android:layout_below="@id/rg_rpcalc_gender"
        android:layout_toEndOf="@id/rg_rpcalc_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_jump"/>
     

</RelativeLayout>
