<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_root"
    android:background="@drawable/ctgu2012" >
    
    <TextView 
        android:id="@+id/tv_splash_0207"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="#f00"
        android:shadowRadius="1"
        
        android:textSize="32sp"
        android:text="@string/app_name"
         />
      
    <ProgressBar 
        android:id="@+id/pb_splash_0207"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_splash_0207"
        android:layout_centerHorizontal="true"/>
    
    <EditText 
        android:id="@+id/et_splash_0207"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/splash_download"/>
    <Button 
        android:id="@+id/btn_splash_0207"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_splash_0207"
        android:text="@string/update"
        android:onClick="update"/>
    
</RelativeLayout>
