<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <Button 
        android:id="@+id/btn_pdstart_0130"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="start"
        android:text="@string/start"/>
    <Button 
        android:id="@+id/btn_pdstop_0130"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stop"
        android:layout_toEndOf="@id/btn_pdstart_0130"
        android:text="@string/stop"/>
    <EditText 
        android:id="@+id/et_pressure_0130"
        android:layout_toEndOf="@id/btn_pdstop_0130"
        android:gravity="center|end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/app_name"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ProgressBar 
        android:id="@+id/pb_pressure_0130"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_pdstart_0130"
        style="@android:style/Widget.ProgressBar.Horizontal"/>
    
    <com.onezao.onezao.pressurediagram0130.MyPressureView 
        android:id="@+id/pb_mypressure_0130"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pb_pressure_0130"/>
</RelativeLayout>
